--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
+.container{
+  background-color: rgb(35, 167, 167);
+  max-width: 400px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  border: 1px solid #e1e1e1;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+
+}
+.fluid{
+ background-color: rgb(13, 233, 68);
+border-radius: 3px;
+border: none;
+padding: 10px;
+cursor: pointer;
+margin: 0 auto;
+width: auto;
+}
+.fluid:hover{
+  background-color: blue;
+}
+.ui.form{
+  width: 100%;
+  max-width: 300px;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading{
+  text-align: center;
+  margin-bottom: 20px;
+}
+.field{
+  width: 100%;
+  padding: 10px;
+  border-radius: 3px;
+  border:  #ccc;
+}
+p{
+  color: red;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
+.btn-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
