--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,54 @@
-.Contact-list{
-    background-color: rgb(1, 0, 5);
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    font-weight: 600;
-    font-size: 24px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  
-}
+.container{
+  background-color: rgb(35, 167, 167);
+  max-width: 400px;
 
-.Exp-container{
-    background-color: black;
-    display: flex;
-justify-content: center;
-flex-direction: column;
+  border: 1px solid #e1e1e1;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 
 }
-.para-style{
-    margin: 20px;
-    font-weight: 600;
-    font-size: 24px;
-    color: rgb(19, 83, 245);
-  
+.fluid{
+ background-color: rgb(13, 233, 68);
+border-radius: 3px;
+border: none;
+padding: 10px;
+cursor: pointer;
+margin: 0 auto;
+width: auto;
 }
-.para-styl{
-    color: rgb(237, 245, 245);
-    margin: 20px;
-    font-weight: 600;
-    font-size: 24px;
+.fluid:hover{
+  background-color: blue;
+}
+.ui.form{
+  width: 100%;
+  max-width: 300px;
+  text-align: center;
+}
+
+
+.heading{
+  text-align: center;
+  margin-bottom: 20px;
+}
+.field{
+  width: 100%;
+  padding: 10px;
+  border-radius: 3px;
+  border:  #ccc;
+}
+p{
+  color: red;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
+.btn-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
